# mc_rtc-imgui

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Category.cpp  Category.h  Client.cpp  Client.h  InteractiveMarker.h  Plot.cpp  Plot.h  README.md  Widget.h
include/mc_rtc-imgui/: Category.h  Client.h  InteractiveMarker.h  Plot.h
include/mc_rtc-imgui/widgets/: ArrayInput.h  ArrayLabel.h  Button.h  Checkbox.h  ComboInput.h  DataComboInput.h  Form.h  IndentedSeparator.h  IntegerInput.h  Label.h  NumberInput.h  NumberSlider.h  Schema.h  StringInput.h  Table.h  Widget.h
include/mc_rtc-imgui/widgets/details/: SingleInput.h
include/mc_rtc-imgui/widgets/form/: schema.h  widgets.h
src/: Category.cpp  Client.cpp  Plot.cpp
src/widgets/: Schema.cpp
src/widgets/form/: schema.cpp  widgets.cpp
widgets/: ArrayInput.h  ArrayLabel.h  Button.h  Checkbox.h  ComboInput.h  Form.h  IndentedSeparator.h  IntegerInput.h  Label.h  NumberInput.h  NumberSlider.h  Schema.cpp  StringInput.h  Table.h
widgets/details/: SingleInput.h
widgets/form/: schema.cpp  schema.h  widgets.cpp  widgets.h
